--- a/exel/index.html
+++ b/exel/index.html
@@ -12,6 +12,7 @@
     <script src="react/react.js"></script>
     <script src="react/react-dom.js"></script>
     <script src="react/babel.js"></script>
+    <script src="react/proptypes.js"></script>
     <script type="text/babel" src="./exel.js">
       // код моего приложения
     </script>
